# deep-learning-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json
.dvc/: config
config/: eval.yaml  train.yaml
config/callbacks/: default.yaml  early_stopping.yaml  lr_monitor.yaml  model_checkpoint.yaml  model_summary.yaml  progress_bar.yaml
config/dataset/: cifar10.yaml  cifar100.yaml
config/debug/: default.yaml
config/experiment/: A.yaml  B.yaml  C.yaml
config/hydra/: default.yaml
config/loggers/: csv_logger.yaml  default.yaml  dvc_logger.yaml
config/model/: resnet18.yaml
config/paths/: default.yaml
config/trainer/: default.yaml
data/: cifar10.dvc  cifar100.dvc
notebooks/: example_notebook.ipynb
scripts/: setup.sh
src/: eval.py  train.py
src/callbacks/: model_summary.py  progress_bar.py
src/datasets/: cifar10.py  cifar100.py
src/models/: resnet18.py
src/utils/logging/: base_logger.py  log_hyperparameters.py  logging_formatter.py  ranked_logger.py
src/utils/misc/: find_num_worker_default.py  task_wrapper.py
src/utils/training_helpers/: apply_extra_utilities.py  create_directories.py  enforce_tags.py  get_tracked_metric_value.py  hydra_instantiators.py  merge_test_metrics.py
tests/: conftest.py  test_config.py  test_eval.py  test_sweeps.py  test_train.py
tests/datasets/: test_cifar10.py
tests/helpers/: run_if.py  run_sh_command.py
tests/pytest_helpers/: _package_available.py  run_if.py  run_sh_command.py
(+10 files in other folders)
